make MEM, CPU, PROFILE, JAVA_OPTS parameters